# docker_dotfiles

./: .copilotignore  .credentials.json  .devcontainer  .dockerignore  .env  .env.development  .env.example  .env.production  .gitignore  .gitignore.backup  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .secrets.baseline  .vscodeignore  AGENT.md  CLEANUP-REPORT.md  CLUSTER.md  ENHANCEMENTS-COMPLETE.md  ENVIRONMENT-INTEGRATION-COMPLETE.md  Makefile  README.md  SECURITY.md  SETUP.md  TESTING_IMPLEMENTATION.md  TODO.md  TODOS.md  agent_app.py  automate.sh  build.sh  cluster-status-report.md  coverage.xml  docker-bake.hcl  docker-compose.mariadb.yml  docker-compose.postgres.yml  docker-compose.yml  mkdocs.yml  package.json  pyproject.toml  pyrightconfig.json  (+5 more)
.benchmark/: README.md  analyze_benchmark.py  analyze_benchmarks.py  benchmark_config.yaml  benchmark_config.yml  requirements.txt
.benchmark/results/: benchmark_20251024_232513.json
.compose/: .env.development  CHANGELOG.md  DEVELOPMENT.md  README.md  automate.sh  automate_stacks.py  init-python-volume.sh  install-python-mcp.sh  validate_stacks.py
.compose/basic-stack/: docker-compose.yml
.compose/cluster-example/: docker-compose.yml
.compose/github-actions-runner/: .env  .env.example  Dockerfile  README.md  docker-compose.yml
.compose/lib/: common.sh
.compose/mcp/: docker-compose.yml
.compose/observability/: README.md  docker-compose.yml
.compose/swarm-stack/: docker-compose.yml
.config/: CONFIGURATION-ALIGNMENT-SUMMARY.md  INDEX.md  README.md  cluster.config.yml  cluster.yml  jekyll.config.yml  toc.yml
.config/agent/: config.yml
.config/basic-stack/: config.yml
.config/cluster/: README.md  cluster.config.yml
.config/cluster-example/: config.yml
.config/database/: README.md  postgresql.conf
.config/devcontainer/: README.md  devcontainer.json
.config/docker/: README.md  buildkit.toml  buildkitd.toml  compose.override.example.yml  daemon.json
.config/docs/: categories.yml  index.yml  metadata.yml  quick-access.yml  toc.yml
.config/git/: .pre-commit-config.yaml  README.md
.config/github/: README.md  actions.yml  branch-protection.yml  code-security.yml  dependabot.yml  labeler.yml  project-v4.0.yml  repository.yml  secrets.yml
.config/jekyll/: Gemfile
.config/markdownlint/: README.md
.config/mcp/: config.yml
.config/mkdocs/: Dockerfile  README.md  base.yml  hooks.yml  linkcheck-skip.txt  markdown.yml  merge_configs.py  mkdocs.yml  mkdocs.yml.bak  mkdocs.yml.old  navigation.yml  nginx.conf  plugins.yml  python-tags.conf  requirements.txt  theme.yml
.config/monitoring/: README.md  alertmanager.yml  prometheus.yml
.config/nginx/: README.md  default.conf  loadbalancer.conf
.config/python/: README.md
.config/services/: README.md  localstack-init.sh  pgadmin-servers.json
.config/swarm-stack/: config.yml
.config/testing/: README.md  test-suite.yml
.config/traefik/: README.md  traefik.yml
.config/web/: tsconfig.json
.copilot/: README.md  ignore  instructions.md  performance-metrics.md
.copilot-tracking/: README.md
.copilot-tracking/changes/: 20251025-mkdocs-bleeding-edge-changes.md  (+3 more)
.devcontainer/: devcontainer-lock.json  devcontainer.dockerfile  devcontainer.env  devcontainer.json  init.sql
.docker-compose/: DEVELOPMENT.md  README.md  TESTING.md  validate_stacks.py
.docker-compose/mcp/: README.md  (+1 more)
.dockerfiles/: cadvisor.Dockerfile  grafana.Dockerfile  loki.Dockerfile  mariadb.Dockerfile  mariadb.cnf  my.cnf  nginx.Dockerfile  nginx.conf  node-exporter.Dockerfile  node.Dockerfile  pg_hba.conf  postgresql.Dockerfile  postgresql.conf  prometheus.Dockerfile  promtail.Dockerfile  python.Dockerfile  redis.Dockerfile  redis.conf
.docs/: architecture.md  deployment.md  troubleshooting.md
.env/: .env.development  .env.docker  .env.example  README.md
.github/: CLEANUP-SUMMARY.md  CODEOWNERS  DEVELOPMENT_DEBT.md  PROJECT-SETUP-COMPLETE.md  TODO.md  commands.yml  copilot-instructions.md  dependabot.yml  issue-templates.json
.hooks/: README.md  pre-commit  pre-commit.ps1
.secrets/: .env.template  .gitignore  README.md  secrets.env
agent/: config.py
api/: Dockerfile  README.md  SECURITY.md  auth.js  middleware.js  package.json  server.js
backend/: server.js
dashboard/: .eslintrc.cjs  Makefile  postcss.config.js  tailwind.config.js  tsconfig.json
dockerfile/: buildkit.Dockerfile  devcontainer.Dockerfile  docker-api.Dockerfile  github-mcp.Dockerfile  gpu-node.Dockerfile  grafana.Dockerfile  jupyter.Dockerfile  k9s.Dockerfile  localstack.Dockerfile  mailhog.Dockerfile  mariadb.Dockerfile  minio.Dockerfile  mkdocs.Dockerfile  nginx.Dockerfile  pgadmin.Dockerfile  postgres.Dockerfile  pre-commit.Dockerfile  prometheus.Dockerfile  redis-commander.Dockerfile  redis-exporter.Dockerfile  redis.Dockerfile  traefik.Dockerfile  web-dashboard.Dockerfile
dockerfiles/: github-mcp.Dockerfile  grafana.Dockerfile  jupyter.Dockerfile  k9s.Dockerfile  minio.Dockerfile  prometheus.Dockerfile  redis.Dockerfile
docs/: .pages  ENVIRONMENT_SETUP.md  IMPLEMENTATION-SUMMARY.md  INDEX.md  PHASE2-DEPLOYMENT.md  PHASE3-DEPLOYMENT.md  PHASE4-COMPLETION.md  RESOURCE-ALLOCATION.md  architecture.md  deployment.md  docker-socket-security.md  production-deployment.md  python-3.14-installation-issue.md  python-setup-troubleshooting.md  tools.md  troubleshooting.md
frontend/: README.md  tsconfig.json
monitoring/: alertmanager.yml  prometheus.yml
scripts/: MIGRATION.md  README.md  orchestrator.ps1  orchestrator.py  orchestrator.sh  pylint_dupes.txt  serve_docs.sh  start_devcontainer.ps1  start_devcontainer.sh  test_integration.ps1  validate_configs.py  validate_env.ps1  validate_env.py
secrets/: .gitignore  .secrets.example  README.md  db_password.txt  mariadb_root_password.example.txt
tests/: README.md  __init__.py  conftest.py
web-content/: .eslintrc.cjs  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION.md  INSTALL.md  Makefile  QUICKSTART.md  README.md  dev.ps1  index.html  nginx.conf  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
(+583 files in other folders)
