[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-utils"
version = "0.2.0"
description = "Modular enterprise-grade MCP-compliant Python utilities for Docker Compose documentation and component management"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "Docker Compose Team", email = "team@docker-compose.dev" }]
maintainers = [{ name = "Docker Compose Team", email = "team@docker-compose.dev" }]
keywords = ["documentation", "components", "MCP", "utilities", "docker", "compose"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dependencies = [
  "mkdocs>=1.5.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "PyYAML>=6.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.0.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "mcp>=0.1.0",
  "structlog>=23.2.0",
  "click>=8.1.0",
  "rich>=13.7.0",
  "urllib3>=2.0.0",
  "lxml>=5.1.0",
  "python-dotenv>=1.0.0",
  # Agent Development Dependencies
  "openai>=1.0.0",
  "anthropic>=0.7.0",
  "langchain>=0.1.0",
  "langchain-openai>=0.0.5",
  "langchain-anthropic>=0.1.0",
  "agent-framework>=0.1.0",
  "crewai>=0.1.0",
  "autogen>=0.2.0",
  "llama-index>=0.9.0",
  "transformers>=4.30.0",
  "torch>=2.0.0",
  "sentence-transformers>=2.2.0",
  "faiss-cpu>=1.7.0",
  "chromadb>=0.4.0",
  "weaviate-client>=3.25.0",
  "pinecone-client>=2.2.0",
  "redis>=4.5.0",
  "celery>=5.3.0",
  "pika>=1.3.0",
  "streamlit>=1.25.0",
  "gradio>=3.40.0",
  "chainlit>=0.7.0",
  "langserve>=0.0.30",
  "langsmith>=0.0.50",
  "arize>=0.9.0",
  "deepeval>=0.20.0",
  "ragas>=0.0.20",
]

[project.optional-dependencies]
docs = [
  "mkdocs-material>=9.4.0",
  "mkdocstrings[python]>=0.24.0",
  "mkdocs-git-revision-date-localized-plugin>=1.2.0",
  "mkdocs-minify-plugin>=0.7.0",
  "mkdocs-redirects>=1.2.0",
]
agent = [
  "openai>=1.0.0",
  "anthropic>=0.7.0",
  "langchain>=0.1.0",
  "langchain-openai>=0.0.5",
  "langchain-anthropic>=0.1.0",
  "agent-framework>=0.1.0",
  "crewai>=0.1.0",
  "autogen>=0.2.0",
  "llama-index>=0.9.0",
  "transformers>=4.30.0",
  "torch>=2.0.0",
  "sentence-transformers>=2.2.0",
  "faiss-cpu>=1.7.0",
  "chromadb>=0.4.0",
  "weaviate-client>=3.25.0",
  "pinecone-client>=2.2.0",
  "redis>=4.5.0",
  "celery>=5.3.0",
  "pika>=1.3.0",
  "streamlit>=1.25.0",
  "gradio>=3.40.0",
  "chainlit>=0.7.0",
  "langserve>=0.0.30",
  "langsmith>=0.0.50",
  "arize>=0.9.0",
  "deepeval>=0.20.0",
  "ragas>=0.0.20",
]
ml = [
  "scikit-learn>=1.3.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "plotly>=5.15.0",
  "jupyter>=1.0.0",
  "ipykernel>=6.23.0",
  "notebook>=6.5.0",
]

[dependency-groups]
dev = [
  "mypy>=1.7.0",
  "ruff>=0.1.0",
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.0.0",
  "black>=23.11.0",
  "isort>=5.12.0",
  "pre-commit>=3.5.0",
]
agent-dev = [
  "pytest-asyncio>=0.21.0",
  "pytest-mock>=3.11.0",
  "pytest-benchmark>=4.0.0",
  "pytest-profiling>=1.7.0",
  "locust>=2.15.0",
  "faker>=18.0.0",
  "factory-boy>=3.2.0",
  "responses>=0.23.0",
  "vcrpy>=5.1.0",
  "freezegun>=1.2.0",
  "time-machine>=2.10.0",
  "pytest-freezegun>=0.4.0",
  "pytest-vcr>=1.0.0",
  "pytest-factoryboy>=2.5.0",
  "pytest-mockito>=0.0.4",
  "pytest-socket>=0.6.0",
  "pytest-httpx>=0.24.0",
  "pytest-django>=4.5.0",
  "pytest-flask>=1.3.0",
  "pytest-fastapi>=0.8.0",
  "httpx>=0.25.0",
  "aiohttp>=3.8.0",
  "websockets>=11.0.0",
  "pytest-aiohttp>=1.0.0",
  "pytest-asyncio-network-simulator>=0.1.0",
]

[project.scripts]
docker-compose-utils = "docker_utils.cli:main"

[project.urls]
Homepage = "https://github.com/docker-compose/docker-utils"
Documentation = "https://docker-compose.dev/docs/python-utils"
Repository = "https://github.com/docker-compose/docker-utils"
Issues = "https://github.com/docker-compose/docker-utils/issues"
Changelog = "https://github.com/docker-compose/docker-utils/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["docker_utils"]
package-dir = {"" = ".docker-compose/mcp/python_utils"}

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
pretty = true
show_column_numbers = true
show_error_context = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]

[tool.ruff.lint.isort]
known-first-party = ["docker_utils"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config --cov=docker_utils --cov-report=term-missing --cov-report=html --cov-report=xml -n auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["docker_utils"]
omit = ["*/tests/*", "*/test_*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["docker_compose_utils"]

[tool.pylint.messages_control]
disable = [
  "C0114", # missing-module-docstring
  "C0115", # missing-class-docstring
  "C0116", # missing-function-docstring
  "R0903", # too-few-public-methods
  "R0913", # too-many-arguments
]
known_third_party = ["fastapi", "pydantic", "uvicorn"]

[tool.taplo]
include = ["*.toml"]
exclude = [".git", "target"]
[tool.taplo.formatting]
align_comments = true
align_entries = true
array_auto_collapse = false
array_auto_expand = true
column_width = 120
compact_arrays = false
compact_inline_tables = false
indent_entries = true
indent_tables = true
reorder_arrays = true
reorder_keys = true
trailing_newline = true

[tool.docker-compose]
validate = "python .docker-compose/validate_stacks.py"
build = "python .docker-compose/validate_stacks.py --build"
test = "python .docker-compose/validate_stacks.py --build --test"
clean = "python .docker-compose/validate_stacks.py --cleanup && docker system prune -f"
up = "docker compose -f .docker-compose/basic-stack/docker-compose.yml up -d"
down = "docker compose -f .docker-compose/basic-stack/docker-compose.yml down"
logs = "docker compose -f .docker-compose/basic-stack/docker-compose.yml logs -f"
ps = "docker compose -f .docker-compose/basic-stack/docker-compose.yml ps"
generate_compose = "python .docker-compose/validate_stacks.py --generate-compose"

[tool.docker-compose.help]
description = "Docker Compose Management - Available commands: validate, build, test, clean, up, down, logs, ps, generate_compose"

[tool.docker-compose.config]
config_folder = ".config"
compose_folder = ".docker-compose"

# Minimal TOML referencing .config for all paths and scripts
# Makefile removed; all commands are now managed via pyproject.toml

[tool.mypyc]
python_version = "3.13"
opt_level = 2
debug_level = 0
strict_dunder_typing = true
show_error_codes = true
mypy_global_config_file = "pyproject.toml"
